--- a/assets/styles/frontend/common/components/box/detail.less
+++ b/assets/styles/frontend/common/components/box/detail.less
@@ -1,9 +1,13 @@
 @box-detail-info-width: 500px;
 @box-detail-info-width-small: 420px;
+@box-detail-variant-info-width: 590px;
+@box-detail-variant-info-width-small: 450px;
 @box-detail-info-gap: 80px;
 @box-detail-info-gap-small: 40px;
 @box-detail-left-width: calc(~"100% - (@{box-detail-info-width} + @{box-detail-info-gap})");
 @box-detail-left-width-small: calc(~"100% - (@{box-detail-info-width-small} + @{box-detail-info-gap-small})");
+@box-detail-variant-left-width: calc(~"100% - (@{box-detail-variant-info-width} + @{box-detail-info-gap})");
+@box-detail-variant-left-width-small: calc(~"100% - (@{box-detail-variant-info-width-small} + @{box-detail-info-gap-small})");
 
 @box-detail-image-main-bottom-gap: 20px;
 @box-detail-image-min-height: 250px;
@@ -33,10 +37,7 @@
         }
     }
 
-    &__image {
-        display: flex;
-        flex-direction: column;
-        position: relative;
+    &__left {
         margin-bottom: 40px;
 
         @media @query-lg {
@@ -47,6 +48,43 @@
         @media @query-xl {
             width: @box-detail-left-width;
         }
+
+        .box-detail__product--variant & {
+            @media @query-lg {
+                width: @box-detail-variant-left-width-small;
+            }
+    
+            @media @query-vl {
+                width: @box-detail-variant-left-width;
+            }
+        }
+
+        &__description {
+            line-height: 42px;
+            margin: 0 0 40px;
+
+            font-family: @font-alt;
+            font-size: 24px + 1px;
+        }
+
+        &__subtitle {
+            line-height: 30px;
+            margin: 0 0 13px;
+            text-transform: uppercase;
+            font-size: @font-size-big;
+            font-weight: 700;
+            color: rgba(0, 43, 65, 0.5);
+
+            &__info {
+                color: @color-base;
+            }
+        }
+    }
+
+    &__image {
+        display: flex;
+        flex-direction: column;
+        position: relative;
 
         &__main {
             position: relative;
@@ -61,16 +99,6 @@
         display: flex;
         flex-direction: column;
         position: relative;
-        margin-bottom: 40px;
-
-        @media @query-lg {
-            width: @box-detail-left-width-small;
-            margin-bottom: 0;
-        }
-
-        @media @query-xl {
-            width: @box-detail-left-width;
-        }
 
         &__wrap {
             display: flex;
@@ -156,11 +184,25 @@
             margin-left: @box-detail-info-gap;
         }
 
+        .box-detail__product--variant & {
+            @media @query-lg {
+                width: @box-detail-variant-info-width-small;
+            }
+    
+            @media @query-vl {
+                width: @box-detail-variant-info-width;
+            }
+        }
+
         &__title {
             line-height: 36px;
             margin-bottom: 10px;
 
             font-size: 30px;
+
+            &--big-gap {
+                margin-bottom: 20px;
+            }
         }
 
         &__description {
@@ -238,6 +280,11 @@
 
         @media @query-vl {
             padding: 30px 50px 20px;
+        }
+
+        &--variant {
+            padding: 15px;
+            margin-bottom: 30px;
         }
     }
 
