--- a/templates/Front/Content/Product/preListingCategoryList.html.twig
+++ b/templates/Front/Content/Product/preListingCategoryList.html.twig
@@ -19,7 +19,7 @@
                 <div class="box-prelist__title">
                     {{ category.getSeoH1(domain.id)|default(category.name) }}
                 </div>
-                
+
                 {{ render(controller('App\\Controller\\Front\\AdvertController:boxAction', {'advert': category.getAdvert(), 'sizeInfoName': 'category' })) }}
 
                 {% include 'Front/Content/Benefits/list.html.twig' %}
@@ -30,6 +30,7 @@
     </div>
 
     {{ render(controller('App\\Controller\\Front\\BestsellingProductController:listAction', {'category': category})) }}
+    {{ render(controller('App\\Controller\\Front\\TopProductController:listAction')) }}
 
     {# TODO CODER: style blogArticles (Zeny na cestach in inVision) #}
     {% if categoriesBlogArticles|length > 0 %}
