design: edit after CR and add style for discount message

--- a/assets/styles/frontend/common/components/box/detail-add.less
+++ b/assets/styles/frontend/common/components/box/detail-add.less
@@ -25,6 +25,10 @@
             margin: -20px -@box-detail-add-message-side-margin (@box-detial-add-item-gap + 10px);
         }
 
+        &--variant {
+            margin: 0 0 20px 0;
+        }
+
         &__icon {
             margin-right: 10px;
             margin-bottom: -7px;
