--- a/templates/Front/Content/Product/boxDetail.html.twig
+++ b/templates/Front/Content/Product/boxDetail.html.twig
@@ -182,10 +182,8 @@
                                                             </div>
                                                         </div>
                                                     {% endif %}
-                                                    <div>
-                                                        {{ discountExclusion.discountExclusionNotice(variant, registrationDiscountExclusionText, promoDiscountExclusionText, allDiscountExclusionText) }}
-                                                    </div>
                                                 </div>
+                                                {{ discountExclusion.discountExclusionNotice(variant, registrationDiscountExclusionText, promoDiscountExclusionText, allDiscountExclusionText, 'box-detail-add__message--variant') }}
                                                 <div class="list-variants__item__prices" itemprop="offers" itemscope itemtype="http://schema.org/Offer">
                                                     {% if getProductSellingPrice(product) is not null %}
                                                         <meta itemprop="priceCurrency"
