design: change format of css

--- a/assets/styles/frontend/common/components/list/products.less
+++ b/assets/styles/frontend/common/components/list/products.less
@@ -175,7 +175,7 @@
                 }
 
                 &__count {
-                    font-weight: bold;
+                    font-weight: 700;
                     text-transform: uppercase;
                 }
             }
