--- a/assets/styles/frontend/common/components/list/products-bomb.less
+++ b/assets/styles/frontend/common/components/list/products-bomb.less
@@ -102,7 +102,7 @@
             }
 
             &__count {
-                font-weight: bold;
+                font-weight: 700;
                 text-transform: uppercase;
             }
         }
