admin: hotfix for domains tabs responsivity
- see https://github.com/shopsys/shopsys/issues/1882

--- a/assets/styles/admin/todo.less
+++ b/assets/styles/admin/todo.less
@@ -35,3 +35,8 @@ input[disabled], textarea[disabled] {
 .list-products__item__set {
     border: 5px solid red;
 }
+
+// see https://github.com/shopsys/shopsys/issues/1882
+.in-domain {
+    flex-wrap: wrap;
+}
