design: fix small css issues

--- a/assets/styles/frontend/common/components/in/add-to-cart.less
+++ b/assets/styles/frontend/common/components/in/add-to-cart.less
@@ -16,6 +16,14 @@
         background-color: darken(@color-add, 5%);
     }
 
+    &--mobile-centered {
+        justify-content: center;
+
+        @media @query-sm {
+            justify-content: flex-start;
+        }
+    }
+
     &__spinbox {
         margin-bottom: 0;
     }
