design: add videos for detail variants and fix availability issue

--- a/assets/styles/frontend/common/components/box/detail.less
+++ b/assets/styles/frontend/common/components/box/detail.less
@@ -328,4 +328,8 @@
         background-color: @color-box;
         border-radius: @radius;
     }
+
+    &__videos {
+        max-width: @box-detail-variant-info-width;
+    }
 }
