--- a/assets/styles/frontend/common/components/box/detail.less
+++ b/assets/styles/frontend/common/components/box/detail.less
@@ -330,6 +330,12 @@
     }
 
     &__videos {
-        max-width: @box-detail-variant-info-width;
+        display: none;
+        margin-bottom: 50px;
+
+        @media @query-lg {
+            display: block;
+            max-width: @box-detail-variant-info-width;
+        }
     }
 }
