--- a/assets/styles/frontend/common/components/list/variants.less
+++ b/assets/styles/frontend/common/components/list/variants.less
@@ -1,4 +1,4 @@
-@list-variants-prices-width: 39%;
+@list-variants-prices-width: 37%;
 @list-variants-image-size: 70px;
 @list-variants-item-gap: 20px;
 @list-variants-item-prices-size: 24px;
@@ -122,6 +122,7 @@
                     padding-right: 10px;
 
                     font-weight: 700;
+                    word-break: breal-all;
                 }
             }
         }
@@ -162,6 +163,7 @@
 
                 &--info {
                     width: 100%;
+                    display: block;
                     line-height: 18px;
                     margin-bottom: 0;
 
