design: edit width of inputs on mobile in admin

--- a/assets/styles/admin/main.less
+++ b/assets/styles/admin/main.less
@@ -4,4 +4,7 @@
 @import "../../public/admin_svg.less";
 @import "~@shopsys/framework/styles/admin/svg-custom.less";
 
+//// Forms
+@import "core/form/input.less";
+
 @import "todo.less";
