design: add button to products slider

--- a/templates/Front/Content/Product/bestsellingProductsList.html.twig
+++ b/templates/Front/Content/Product/bestsellingProductsList.html.twig
@@ -7,7 +7,7 @@
                     {{ 'Nejoblíbenější kousky'|trans }}
                 </h2>
                 <a href="#" class="box-products-slider__subtitle js-not-implemented-yet">{{ 'Přejít na všechny'|trans }}</a>
-                {{ productList.horizontalList(productViews, '', 'h3', 'top-products', false) }}
+                {{ productList.horizontalList(productViews, '', 'h3', 'top-products', true, false, true) }}
             </div>
         </div>
     </div>
