--- a/templates/Front/Content/Product/topProductsList.html.twig
+++ b/templates/Front/Content/Product/topProductsList.html.twig
@@ -6,7 +6,7 @@
                 <h2 class="box-products-slider__title">
                     {{ 'Tento měsíc máme v akci'|trans }}
                 </h2>
-                {{ productList.horizontalList(topProducts, 'list-products-slider--big', 'h3', 'top-products', false) }}
+                {{ productList.horizontalList(topProducts, '', 'h3', 'top-products', true, false, true) }}
             </div>
         </div>
     </div>
