--- a/assets/styles/frontend/common/components/list/variants.less
+++ b/assets/styles/frontend/common/components/list/variants.less
@@ -122,7 +122,7 @@
                     padding-right: 10px;
 
                     font-weight: 700;
-                    word-break: breal-all;
+                    word-break: break-all;
                 }
             }
         }
