design: add style for prelist

--- a/assets/styles/frontend/common/main.less
+++ b/assets/styles/frontend/common/main.less
@@ -101,6 +101,7 @@
 @import "components/list/order-gifts.less";
 @import "components/list/params.less";
 @import "components/list/pickup-place.less";
+@import "components/list/prelist-categories.less";
 @import "components/list/products.less";
 @import "components/list/products-bomb.less";
 @import "components/list/products-line.less";
