--- a/templates/Front/Content/Product/preListingCategoryList.html.twig
+++ b/templates/Front/Content/Product/preListingCategoryList.html.twig
@@ -24,7 +24,7 @@
 
                 {% include 'Front/Content/Benefits/list.html.twig' %}
 
-                {% include 'Front/Content/Category/categoryList.html.twig' with {'categories': visibleChildren, 'currentCategory': category} %}
+                {% include 'Front/Content/Category/categoryList.html.twig' with {'categories': visibleChildren, 'currentCategory': category, 'type': 'prelist'} %}
             </div>
         </div>
     </div>
