--- a/assets/styles/frontend/common/components/box/prelist.less
+++ b/assets/styles/frontend/common/components/box/prelist.less
@@ -2,6 +2,8 @@
 @box-prelist-title-margin-bottom: 22px;
 
 .box-prelist {
+    margin-bottom: 70px;
+    
     &__title {
         display: block;
         line-height: 43px;
