design: add var

--- a/assets/styles/frontend/common/components/box/progress.less
+++ b/assets/styles/frontend/common/components/box/progress.less
@@ -48,7 +48,7 @@
             background: linear-gradient(90deg, #277da8 0%, #58b6a7 33%, #9bc962 66%, #5da94b 100%);
 
             @media @query-lg {
-                border-radius: 8px;
+                border-radius: @radius;
             }
         }
 
