--- a/templates/bundles/ShopsysFrameworkBundle/Admin/Content/Default/index.html.twig
+++ b/templates/bundles/ShopsysFrameworkBundle/Admin/Content/Default/index.html.twig
@@ -8,4 +8,7 @@
         {0} žádný nový | {1} 1 nový | [2,4] %count% nové | [5,Inf] %count% nových
         {% endtranschoice %})
     </a>
+    <a href="{{ url('admin_default_schedulecategoriesimport') }}" class="btn wrap-bar__btn">
+        {{ 'Spustit import kategorií'|trans }}
+    </a>
 {% endblock %}
