--- a/templates/Front/Content/Product/preListingCategoryList.html.twig
+++ b/templates/Front/Content/Product/preListingCategoryList.html.twig
@@ -16,9 +16,9 @@
     <div class="web__line">
         <div class="web__container">
             <div class="box-prelist">
-                <div class="box-prelist__title">
+                <h1 class="box-prelist__title">
                     {{ category.getSeoH1(domain.id)|default(category.name) }}
-                </div>
+                </h1>
 
                 {{ render(controller('App\\Controller\\Front\\AdvertController:boxAction', {'advert': category.getAdvert(), 'sizeInfoName': 'category' })) }}
 
@@ -29,8 +29,8 @@
         </div>
     </div>
 
-    {{ render(controller('App\\Controller\\Front\\BestsellingProductController:listAction', {'category': category})) }}
     {{ render(controller('App\\Controller\\Front\\TopProductController:listAction')) }}
+    {{ render(controller('App\\Controller\\Front\\BestsellingProductController:listAction', {'category': category})) }}
 
     {# TODO CODER: style blogArticles (Zeny na cestach in inVision) #}
     {% if categoriesBlogArticles|length > 0 %}
